adjustments to cover image making; change new property names to oxgarage prefix
git-svn-id: https://enrich-ege.svn.sourceforge.net/svnroot/enrich-ege/project/oxgarage@61 4830b8e0-8a90-4283-b7f1-a7364ff6f0ab

--- a/Tests/expected-results/result2.tex
+++ b/Tests/expected-results/result2.tex
@@ -294,7 +294,7 @@
   \begin{titlepage}
 \title{TEI Lite: 
 Encoding for Interchange: an introduction to the TEI
- — Revised for TEI P5 release}\author{Lou Burnard and C. M. Sperberg-McQueen}
+ — Revised for TEI P5 release}\author{C. M. Sperberg-McQueen}
   \date{February 2006}
   \maketitle
   \end{titlepage}
